用户历史接口调用实现，完善大部分bug

--- a/senfanAPI-backend/src/main/resources/application.yml
+++ b/senfanAPI-backend/src/main/resources/application.yml
@@ -34,8 +34,7 @@ mybatis-plus:
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 senfanapi:
   clent:
-    secret-key: senfan
-    access-key: senfan
+    gateway-host: http://localhost:8090
 dubbo:
   application:
     name: dubbo-springboot-demo-provider
